Revert database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: postgresql
-  database: activeadmin_depot_production
-  pool: 5
-  timeout: 5000
+  <<: *default
+  database: db/production.sqlite3
