--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,6 @@
 default: &default
   adapter: postgresql
+  host: localhost
   pool: 5
   timeout: 5000
   username: <%= ENV.fetch("DATABASE_USERNAME") { "postgres" } %>
