Add some default values

--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
       "required": true
     },
     "LANG": {
-      "required": true
+      "required": true,
+      "value": "en_US.UTF-8"
     },
     "LIBRATO_PASSWORD": {
       "required": true
@@ -25,16 +26,20 @@
       "required": true
     },
     "RACK_ENV": {
-      "required": true
+      "required": true,
+      "value": "production"
     },
     "RAILS_ENV": {
-      "required": true
+      "required": true,
+      "value": "production"
     },
     "RAILS_LOG_TO_STDOUT": {
-      "required": true
+      "required": true,
+      "value": "enabled"
     },
     "RAILS_SERVE_STATIC_FILES": {
-      "required": true
+      "required": true,
+      "value": "enabled"
     },
     "SECRET_KEY_BASE": {
       "required": true
