--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "name": "demo.activeadmin.info",
   "description": "The demo application for Active Admin",
-  "scripts": {},
+  "scripts": {
+    "postdeploy": "bundle exec rails db:schema:load db:seed"
+  },
   "env": {
     "AIRBRAKE_API_KEY": {
       "required": true
