--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+addons:
+  - postgresql: 9.6
 language: ruby
 rvm:
   - 2.5.3
 before_script:
   - RAILS_ENV=test bin/rails db:create db:migrate
 cache: bundler
+services:
+  - postgresql
