Consistently use double quotes

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,3 +22,7 @@ Metrics:
 
 RSpec/FactoryBot/AttributeDefinedStatically:
   Enabled: true
+
+Style/StringLiterals:
+  Enabled: true
+  EnforcedStyle: double_quotes
