--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ default: &default
   pool: 5
   timeout: 5000
   username: <%= ENV.fetch("DATABASE_USERNAME") { "postgres" } %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") { "" } %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") { "postgres" } %>
 
 development:
   <<: *default
