--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,22 +1,21 @@
----
-
 require:
   - rubocop-rspec
   - rubocop-rails
-
 AllCops:
   DisabledByDefault: true
-
-  TargetRubyVersion: 3.1
-  TargetRailsVersion: 6.0
-
-  Exclude:
-    - vendor/bundle/**/*
-
   DisplayCopNames: true
-
   StyleGuideCopsOnly: false
-
+  TargetRubyVersion: 3.1
+  TargetRailsVersion: 7.0
+  Exclude:
+    - .git/**/*
+    - node_modules/**/*
+    - tmp/**/*
+    - vendor/**/* # avoid running Rubocop in GHA ruby/setup-ruby on vendored dependencies!
+    - .github/**/*
+    - public/**/*
+    - config/**/*.yml
+    - bin/**/*
 Metrics:
   Enabled: false
 
