Add github-actions ecosystem

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,10 @@
----
-
 version: 2
-
 updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
   - package-ecosystem: bundler
     directory: /
     schedule:
       interval: daily
-    open-pull-requests-limit: 10
-    versioning-strategy: increase-if-necessary
