--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,53 +4,43 @@ on:
   push:
     branches:
       - main
-
   pull_request:
+
+concurrency:
+  group: ${{ github.repository }}-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
-
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-
     services:
       postgres:
-        image: postgres:9.6
-
+        image: postgres:15.3
         ports:
           - 5432:5432
-
         env:
           POSTGRES_HOST_AUTH_METHOD: trust
-
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
+          --health-interval 2s
+          --health-timeout 2s
+          --health-retries 30
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - uses: actions/checkout@v3
+      - name: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.1
+          ruby-version: 3.2
           bundler-cache: true
-
-      - name: Setup database
-        run: RAILS_ENV=test bin/rails db:create db:migrate
-
-      - name: Install dependencies
-        run: bundle install
-
       - name: Run rubocop
         run: bundle exec rubocop
-
       - name: Run erb-lint
         run: bundle exec erblint --lint-all
-
+      - name: Setup database
+        run: bin/rails db:create db:migrate
+        env:
+          RAILS_ENV: test
       - name: Run test
-        run: bundle exec rake
+        run: bundle exec rspec
