--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,6 @@ jobs:
           - 5432:5432
         env:
           POSTGRES_HOST_AUTH_METHOD: trust
-        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 2s
@@ -42,5 +41,5 @@ jobs:
         run: bin/rails db:create db:migrate
         env:
           RAILS_ENV: test
-      - name: Run test
+      - name: Run tests
         run: bundle exec rspec
