Add groups for bundler ecosystem
This is being used as a test before applying to other projects.

https://github.blog/2023-08-24-a-faster-way-to-manage-version-updates-with-dependabot/

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,8 @@ updates:
     directory: /
     schedule:
       interval: monthly
+    groups:
+      test-dependencies:
+        dependency-type: "test"
+      rubocop:
+        dependency-type: "rubocop"
