Update groups with test and rubocop
This should fix the error by following another example where we specify the patterns instead. I'm not sure how the dependency types work as to how it determines production vs development. It's not clear from the docs.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,13 @@ updates:
     schedule:
       interval: monthly
     groups:
-      test-dependencies:
-        dependency-type: "test"
-      rubocop:
-        dependency-type: "rubocop"
+      test-gems:
+        patterns:
+          - "factory_bot*"
+          - "faker"
+          - "rspec*"
+          - "shoulda*"         
+      rubocop-gems:
+        patterns:
+          - "rubocop*"
+          - "erb_lint"
