Attempt to fix Render error
Error: databases[0].user not a valid DB user name

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: activeadmin-demo-test-db
     databaseName: mysite
-    user: activeadmin-demo-test
+    user: mysite
     plan: free
 
 services:
