--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: activeadmin-demo-test-db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
