--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@activeadmin/activeadmin": "github:activeadmin/activeadmin#master",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/active_admin.css -o ./app/assets/builds/active_admin.css --minify -c tailwind-active_admin.config.js"
   }
 }
