--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/active_admin.css -o ./app/assets/builds/active_admin.css --minify -c tailwind-active_admin.config.js"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
