Update dependencies and Ruby to 3.2.4
Also disallow sqlite3 >= 2.0 waiting for rails/rails#51636

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,9 @@ updates:
       bundler:
         patterns:
           - "*"
+    ignore:
+      - dependency-name: sqlite3
+        versions: ">= 2" # FIXME: Remove when rails/rails#51636 will be released
   - package-ecosystem: npm
     directory: /
     schedule:
