Upgrade to Rails 8.0 and adopt new features
- Bump Rails to version 8.0 and execute `rails app:update` for
  configuration alignment
- Recommend Node.js 22 for development and runtime compatibility
- Enhance Dependabot configuration for improved dependency management
- Remove suppression of SQLite production warning, addressing
  rails/rails#50463
- Use an example domain for email addresses in test suites
- Reorder certain path assertions after text assertions in specs to
  ensure server state is persisted
- Add the frozen string literal magic comment to Ruby files
- Switch to Rails 8’s built-in rate limiter for request throttling

Closes #637

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,9 +17,6 @@ updates:
       bundler:
         patterns:
           - "*"
-    ignore:
-      - dependency-name: sqlite3
-        versions: ">= 2" # FIXME: Remove when rails/rails#51636 will be released
   - package-ecosystem: npm
     directory: /
     schedule:
@@ -29,3 +26,6 @@ updates:
       npm:
         patterns:
           - "*"
+    ignore:
+      - dependency-name: "tailwindcss"
+        versions: ">= 4.0"
