--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "tailwindcss": "^3.4.18"
   },
   "scripts": {
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/active_admin.css -o ./app/assets/builds/active_admin.css --minify -c tailwind-active_admin.config.js"
+    "build:css": "npx tailwindcss -i ./app/assets/stylesheets/active_admin.css -o ./app/assets/builds/active_admin.css --minify -c tailwind-active_admin.config.js"
   },
   "packageManager": "yarn@1.22.19"
 }
