--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "app",
   "private": "true",
+  "type": "module",
   "dependencies": {
-    "@activeadmin/activeadmin": "4.0.0-beta18",
-    "tailwindcss": "^3.4.18"
+    "@activeadmin/activeadmin": "4.0.0-beta19",
+    "tailwindcss": "^4.1.17"
   },
   "scripts": {
-    "build:css": "npx tailwindcss -i ./app/assets/stylesheets/active_admin.css -o ./app/assets/builds/active_admin.css --minify -c tailwind-active_admin.config.js"
+    "build:css": "npx @tailwindcss/cli -i ./app/assets/stylesheets/active_admin.css -o ./app/assets/builds/active_admin.css --minify"
   },
   "packageManager": "yarn@1.22.19"
 }
