npm install @tailwindcss/cli
We need this to run the demo app locally since it needs to build the CSS.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "@activeadmin/activeadmin": "4.0.0-beta20",
+    "@tailwindcss/cli": "^4.1.18",
     "tailwindcss": "^4.1.18"
   },
   "scripts": {
